Fixed bug: added media query; now the game is playable on tablets.

--- a/Public/index.css
+++ b/Public/index.css
@@ -4,13 +4,13 @@
    Added box-sizing, end-of-reset comment.
 */
 
-html {
+html{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
   }
   
-  *, *:before, *:after {
+  *, *:before, *:after{
     box-sizing: inherit;
   }
   
@@ -25,7 +25,7 @@ html {
   aside, canvas, details, embed, figure, 
   figcaption, footer, header, hgroup, menu, nav, 
   output, ruby, section, summary, time, mark, 
-  audio, video {
+  audio, video{
     margin: 0;
     padding: 0;
     border: 0;
@@ -36,29 +36,29 @@ html {
   
   /* HTML5 display-role reset for older browsers */
   article, aside, details, figcaption, figure, 
-  footer, header, hgroup, menu, nav, section {
+  footer, header, hgroup, menu, nav, section{
       display: block;
   }
   
-  body {
+  body{
     line-height: 1;
   }
   
-  ol, ul {
+  ol, ul{
     list-style: none;
   }
   
-  blockquote, q {
+  blockquote, q{
     quotes: none;
   }
   
   blockquote:before, blockquote:after,
-  q:before, q:after {
+  q:before, q:after{
     content: '';
     content: none;
   }
   
-  table {
+  table{
     border-collapse: collapse;
     border-spacing: 0;
   }
@@ -170,7 +170,7 @@ body, html{
     background-color: antiquewhite;
 }
 
-.credentialsForm label {
+.credentialsForm label{
 	display: inline-block;
 	vertical-align: middle;
 	width: 90px;
@@ -211,11 +211,20 @@ body, html{
     border-radius: 10px
 }
 
+.boardContainer{
+    grid-area: chessboard;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    background-image: url('../Images/Chess_Board.jpg');
+    background-size: cover;
+    border: 0;
+}
+
 /****************/
 /*   PORTRAIT   */
 /****************/
 
-@media (orientation:portrait) {
+@media (orientation:portrait){
     
     .upperRightContainer{
         display: none;
@@ -322,7 +331,7 @@ body, html{
         grid-area: text;
         height: 90vh;
         overflow: auto;
-        padding: 3vw;
+        padding-top: 2vw;
     }
     
     /*   BUTTONS   */
@@ -412,21 +421,15 @@ body, html{
     }
 
     .boardContainer{
-        grid-area: chessboard;
-        display: grid;
-        grid-template-columns: repeat(8, 1fr);
-        background-image: url('../Images/Chess_Board.jpg');
-        background-size: cover;
-        border: 0;
         width: 100%;
     }
 
-    .square {
+    .square{
       border: solid 1px rgba(0,0,0,0.1);
       position: relative;
     }
 
-    .square:hover {
+    .square:hover{
       box-shadow: 0 0 1px 2px rgba(0,255,0,0.6);
     }
 
@@ -452,7 +455,7 @@ body, html{
         height: 14vw;
     }
 
-    .handles-tl {
+    .handles-tl{
       border-top: solid 2px green;
       border-left: solid 2px green;
       width: 5px;
@@ -462,7 +465,7 @@ body, html{
       left: 2px;
     }
 
-    .handles-tr {
+    .handles-tr{
       border-top: solid 2px green;
       border-right: solid 2px green;
       width: 5px;
@@ -472,11 +475,11 @@ body, html{
       right: 2px
     }
 
-    .handles {
+    .handles{
       display: none;
     }
 
-    .square:hover > .handles {
+    .square:hover > .handles{
       display: block;
     }
 
@@ -591,7 +594,7 @@ body, html{
 /*   LANDSCAPE   */
 /*****************/
 
-@media (orientation:landscape) {
+@media (orientation:landscape){
     
     .upperContainer{
         display: none;
@@ -772,14 +775,7 @@ body, html{
     }
 
     .boardContainer{
-        grid-area: chessboard;
-        display: grid;
-        grid-template-columns: repeat(8, 1fr);
-        background-image: url('../Images/Chess_Board.jpg');
-        background-size: cover;
-        border: 0;
         height: 100%;
-        /* grid-column: 2/3; */
     }
     
     .square{
@@ -789,6 +785,7 @@ body, html{
 
     .textPageContainer{
         display: grid;
+        height: 100%;
         grid-template-columns: 4fr 1fr;
         grid-template-areas: 
             'title header'
@@ -811,7 +808,7 @@ body, html{
         grid-area: text;
         height: 75vh;
         overflow: auto;
-        padding: 3vw;
+        padding-top: 2vh;
     }
     
     .js-movesButton{
@@ -971,4 +968,73 @@ body, html{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+@media only screen
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait){
+
+    .boardContainer{
+        height: 80vw;
+        width: 80vw;
+        justify-self: center;
+        margin-top: 1.5vh;
+    }
+
+    .lowerContainer{
+        margin-top: 3vh;
+    }
+
+    .js-gameControlsButton{
+        height: 8vw;
+    }
+
+    .js-gameControlsButton img{
+        height: 8vw;
+    }
+
+    .scoreTable{
+        font-size: 1.5rem;
+    }
+}
+
+@media only screen
+and (min-device-width : 768px) 
+and (max-device-width : 1366px) 
+and (orientation : landscape){
+
+    .boardContainer{
+        height: 80vh;
+        width: 80vh;
+        align-self: center;
+    }
+
+    .gamePageContainer{
+        grid-template-columns: 1vw 80vh 1fr;
+    }
+    
+    .upperRightContainer{
+        grid-template-columns: 0.5% 5fr 1fr 1fr;
+    }
+
+    .js-gameControlsButton{
+        height: 8vh;
+    }
+
+    .js-gameControlsButton img{
+        height: 8vh;
+    }
+    
+    .gameTitleLand img{
+        width: 22vw;
+    }
+
+    .js-backButtonGamePage{
+        justify-self: end;
+    }
+
+    .scoreTable{
+        font-size: 1.5rem;
+    }
 }
